assets/sass/sections/_menu.scss
.menu {
  display: none;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-between;
  position: fixed;
  top: 0;
  right: 0;
  width: 80%;
  height: 100vh;
  padding: 50px 27px;
  transform: translateX(100%);
  opacity: 0;
  background-color: var(--white);
  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
  z-index: 100;
  &.active {
    transform: translateX(0);
    opacity: 1;
  }
  &__list {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 48px;
  }
  &__item {
    font-weight: 400;
    font-size: 24px;
    color: var(--gray);
    display: flex;
    align-items: center;
    transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
    transform: translateX(-18px);
    &::before {
      content: '';
      display: inline-block;
      margin-right: 8px;
      background-color: var(--orange);
      width: 10px;
      height: 10px;
      border-radius: 50%;
      opacity: 0;
      transform: translateX(-100%);
      transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
    }
    &:hover {
      color: var(--orange);
      transform: translateX(0);
      &::before {
        opacity: 1;
        transform: translateX(0);
      }
    }
  }
  &__button {
    font-size: 18px;
    .button__content {
      gap: 18px;
      font-weight: 400;
    }
  }
  &__close {
    display: inline-block;
    position: absolute;
    top: 19px;
    right: 17px;
    width: 16px;
    height: 17px;
    z-index: 25;
    &-icon {
      display: inline-block;
      width: 100%;
      height: 100%;
      background-image: url('../images/close-icon.svg');
      background-repeat: no-repeat;
      background-position: center center;
      background-size: cover;
    }
  }
}

